--- a/Bgloss.css
+++ b/Bgloss.css
@@ -1,13 +1,13 @@
-.ac{
+.container{
  position : relative;
-  width : 90vw;
-   height : 100vh;
+  width : 90%;
+   height : 100%;
   padding : 20px;
-  border-style: inset;
+  border : 1px lightblue solid;
   border-radius : 15px;
-  left : 19px;
   top : 10px;
 }
+
 #GlBody #dateTime {
   position : relative;
   top : 10px;
@@ -17,13 +17,13 @@
 }
 #GlBody #logo_image{
   position : relative;
-  width : 30%;
+   width : 30%; 
   left : 65%;
   top : -40px;
 }
 #glossEntry .itemC {
   position : relative;
-  width : 45%;
+  width : 65%;
   height : auto;
   min-height: 200px;
 }
@@ -33,35 +33,42 @@
   height : 120px;
   float : right;
   top : -40px;
-  border : 1px solid aquamarine;
   left: -20px;
 }
 #GlBody #glHeading {
   position : relative; 
-  left : 30%;
+text-align: center;
   font-size : xx-large;
   text-decoration : underline;
+  top : -20px;
   
 }
 #GlBody #pgButtons {
   position : relative;
-  left : 2%;
+  left : 5%;
+  top : -38px;
   
 }
+#GlBody #pgButtons li {
+  position : relative;
+  float : left;
+  background-color: transparent;
+  border : none;
+  width : auto;
+  margin : 5px;
+}
 #GlBody #pgButtons input {
-  position : absolute;
-  width : 10%;
+  position : relative;
   font-size : x-large;
-  border-radius : 15px;
+  border-radius : 5px;
   left : -0%;
-  top : -50px;
   
 }
 #GlBody #pgButtons a {
   position :relative;
   font-size : x-large;
-  margin :15px;
-  
+  border-radius : 5px;
+  padding : 5px;  
 }
 .hiddentext{
   display : none;
