--- a/IBIS_maincss.css
+++ b/IBIS_maincss.css
@@ -16,6 +16,13 @@ top : 10px;
 .littleDD {
 	border-radius:35px;
 }
+#proDiv {
+  position : absolute;
+  width : 70%;
+  background-color : aliceblue;
+  z-index : 10;
+  
+}
 .bigDD {
 	border-radius:25px;
 }
