--- a/Src_small.css
+++ b/Src_small.css
@@ -13,33 +13,34 @@
 #src_fs_main {
   position : relative;
   border : 1px lightblue solid;
-  top : -20%;
+  top : -35px;
   width : 95%;
   padding : 15px;
   min-height: 120px;
   border-radius : 10px;
-  height : 60%;
+  height : auto;
   overflow : auto;
 }
 #SrcallContainer #dateTime {
   position: relative;
-  left: -70%;
+  left: -37%;
   z-index:3;
-  font-size: 18px;
+  font-size: small;
   margin-left:auto;
   padding-left:10px;
   color: green;
-  width: 30%;
+  width: 70%;
+  top : -10px;
 }
 
 #SrcallContainer #logo_image_holder{
     position: relative;
-    left :9%;
+    left :29% ;
     margin-left: auto;
     margin-right: auto;
-    width : 813px;
-    height : 25%;
-    top : -60px;
+    width : 60%;
+    height : 45%;
+    top : -40px;
 }
 
 #SrcallContainer #logo_image {
@@ -49,11 +50,12 @@
 }
 #pgHead {
   position : relative;
-  top : -20%;
-  left : 30%;
-  font-size : xx-large;
+  top : -40px;
+  left : 20%;
+  font-size : x-large;
   text-decoration: underline;
-  width : 300px;
+  width : auto;
+
   
 }
 #src_fs_main span {
@@ -65,9 +67,9 @@
 }
 #src_fs_main input {
   position : relative;
-  width : 80%;
-  float : right;
-
+  width : 180px;
+  left : 50%;
+  
   
 }
 #Ocontainer input {
@@ -75,8 +77,6 @@
   float : none;
   width : auto;
   font-size : x-large;
-  left : 160px;
-  margin : 3px;
   
 }
 #src_fs_main label {
@@ -103,15 +103,19 @@
   font-size : xx-large;
   
 }
+
 #pgButtons li {
   position : relative;
   float : left;
   top : -50px;
   left : 1%;
-  font-size : x-large;
+  font-size : large;
   margin : 5px;
   border-radius : 10px;
   padding : 3px;
+  width : 80px;
+  height : 30px;
+  text-align : center;
   
 }
 .linkC {
@@ -134,7 +138,7 @@
 }
 #Ocontainer {
     position : relative;
-    left : -15%; 
+    left : -12%; 
     top : 25px;
     width : 100%;
     margin : 5px;
@@ -153,40 +157,31 @@
     left : 5px;
     width : auto;
     max-width : 90%;
-    font-size: small;
+    font-size: large;
 }
+
 #pgOptions {
     position : relative;
     left : -78%;
     
-}
-#pgOptions {
+}#pgOptions .button {
     position : relative;
-    left : -78%;
-    
-}#pgOptions input {
-    position : relative;
-    width : auto;
-  max-width : 90%;
-     font-size : large;
-  left : 18px;
-    
-}
-#refContainer {
-  position : relative;
-  
-  
+    width : 120px;
+    font-size : large;
+    margin : 4px;
+    z-index : 7;
+    top : -18px;
+
 }
 #refContainer #refSelect {
 	position : relative;
-	left : 15%;
+	left : 10%;
 	height : auto;
 	padding : 3px;
-  font-size : large;
 }
 #dataF {
     position : relative;
-    left : 0%;
+    left : -8px;
     width : 95%;
   top : 40px;
   
@@ -195,10 +190,36 @@
     border : none;
     
 }
+.inputSet {
+	position : relative;
+	width : 100%;
+	top : 10px;
+}
+#dataF .labelC {
+	position : relative;
+	font-size : large;
+	height : auto;
+	width : 200px;
+	margin : 0px;
+}
+
+#dataF .inputC {
+	position : relative;
+	width : auto;
+	max-width : 249px;
+	left : 2px;
+	padding : 3px;
+	float : none;
+		height : auto; 
+		margin-top : 3px;
+}
+#dataF .button {
+	position : relative;
+	left : -20px;
+	margin : 3px;
+	top : 10px;
+}
 .hiddentext {
   display : none;
 }
-.buttonC {
-  position : relative;
-  left : -23%;
-}
+
