--- a/Src_smaller.css
+++ b/Src_smaller.css
@@ -1,41 +1,41 @@
 /*Sources page styles*/
 
 #SrcallContainer {
- position : absolute;
+ position : relative;
   width : 95vw;
   height : 95vh;
   padding : 10px;
-  border-style: inset;
+  border : 1px lightblue solid;
    border-radius: 22px;
-  background-color : beige;
+  background-color : none;
   overflow : auto;
-  left : -5px;
+  left : 0px;
 }
 
 #src_fs_main {
   position : relative;
-  height : auto;
-  border-style: outset;
+  height : 60%;
+  border : 1px lightblue solid;
   width : 90%;
 	margin : 5px;
   overflow : auto;
 	top : -15%;
 	border-radius : 15px;
-  left : -5px;
-  
+  left : 0px;
+  padding : 15px;
 }
 
 #SrcallContainer #dateTime {
   	position : relative;
 	left : -40%;
 	top : 0%;
-  font-size : large;
+  font-size : medium;
   width : 60%;
 }
 
 #SrcallContainer #logo_image_holder{
     position : relative;
-	left : 10%;
+	left : 0%;
 	top : -8%;
 }
 
@@ -46,6 +46,13 @@
   z-index : 6;
   top : -15px;
 }
+#pgButtons li {
+ margin : 5px;
+ border-radius : 5px;
+ font-size : large;
+
+ padding : 5px;
+}
 #pgHead {
   position : relative;
   top : -15%;
@@ -54,20 +61,22 @@
   text-decoration: underline;
   
 }
-#src_fs_main span {
+#src_fs_main .inputSet {
   position : relative;
-  float : left;
-  clear : both;
   font-size : large;
   width : 90%;
   margin : 5px;
+  left : -80px;
+  top : 20px;
+  
 }
-#src_fs_main input {
+#src_fs_main .inputC {
   position : relative;
   left : 0%;
-  float : right;
-  
-  
+  left : -30px;
+   width : 99%; 
+  max-width : 90%;
+  overflow : auto;
 }
 #src_fs_main label {
   position: relative;
@@ -75,22 +84,21 @@
 	width : 80%;
  } 
 #src_fs_main select {
-  ition : relative;
-  float : right;
-  width : 45%;
-  height : 40px;
+  position : relative;
+   width : 95%; 
+  height : auto;
   
 }
 #src_fs_main select option {
   position : relative;
-  font-size : x-large;
+  font-size : medium;
+  height : auto;
   
 }
 #src_fs_main .buttonC {
   position : relative;
-  float : left;
-  width : 25%;
-  height : 50%;
+  width : auto;
+  height : auto;
   font-size : large;
   
   padding: 0px;
@@ -104,32 +112,32 @@
 
 }
 #Ocontainer {
-    position : absolute;
-    left : -8%;
-    top : 45px;
-    width : 30%;
+    position : relative;
+    left : 0%;
+    top : 5px;
+    width : 99%;
     margin : 5px;
     
 }
 #Ocontainer input {
   position : relative;
-    width : 170px;
-    left: 95px;
+    width : auto;
+    left: -160px;
      top : 0px;
 }
 
 #Ocontainer #refContainer {
     position : relative;
     left : -00%;
-    width :10%;
-    clear :right;
     font-size: small;
+   width : 99%;
 }
 #Ocontainer #refSelect {
   position : relative;
   padding : 0px;
-  width : 170px;
-  left : 190px;
+   width : auto;
+  max-width : 90%;
+  left : -20px; 
   margin : 5px;
   
 }
@@ -141,50 +149,80 @@
 
 #pgOptions input {
     position : relative;
-    width : 160px;
+    width : auto;
     font-size : small;
+  margin-left  : 5px;
+  left : 80px;
     
 }
 #dataF {
     position : relative;
-    left : 3%;
-    width : 75;%
+    left : 40%;
+     width : 95%; 
 }
 
 /* Glossary styles*/
 #GlBody .ac {
   left : -5px;
-  width : 90%;
-  background-color : beige;
+  width : 98%;
   max-height : 100vh;
   overflow : auto;
   scroll : auto;
   
 }
-
+#GlBody #dateTime {
+  position : relative;
+  top : 10px;
+  left : 10px;
+  color : green
+  
+}
+#GlBody #logo_image{
+  position : relative;
+   width : 50%; 
+  left : 50%;
+  top : -40px;
+}
+#subContainer {
+  position : relative; 
+  width : auto;
+  
+}
+#glossEntry img {
+  position : relative;
+  width : 100px;
+  height : 100px;
+  
+}
+#glossEntry .glossP {
+  position : relative;
+  width : auto;
+  height : auto;
+  
+}
 #glossEntry .itemC {
   position : relative;
   width : 90%;
   height : auto;
   overflow : auto;
   max-height: 80%;
+  padding-bottom : 30px;
+  border-bottom : 1px lightblue solid;
   }
 #glossEntry textarea {
   position : relative;
   height : 40px;
-      margin-top : 10px;
 
   }
 #glossEntry input {
   position : relative;
   width : 80%;
-    margin-top : 10px;
-
+  font-size : medium;
   }
 #glossEntry label {
   position : relative;
   align : left;
-  margin-top : 20px;
+  font-size : large;
 }
 .glossP {
   position : relative;
@@ -202,8 +240,8 @@
 }
 #GlBody #glHeading {
   position : relative; 
-  left : 10%;
-  font-size : x-large;
+  text-align : center;
+  font-size : large;
   text-decoration : underline;
 }
 #GlBody #pgButtons {
@@ -212,18 +250,14 @@
   
 }
 #GlBody #pgButtons input {
-  position : absolute;
-  height  : 40px;
-  left : 0%;
-  border-radius : 15px;
-  width : 25%;
-  top : -65px;
-  font-size : x-large;
+  position : relative;
+  border-radius : 5px;
+  font-size : large;
+  width : auto
   
 }
 #GlBody #pgButtons a {
   position : relative;
   font-size : large;
-  margin : 10px;
   
 }
