--- a/imgmatchsmall.css
+++ b/imgmatchsmall.css
@@ -15,23 +15,26 @@
 #buttons label {
     position: relative;
     cursor: pointer;
-    font-size: large;
+    font-size: x-large;
     text-decoration: underline;
-  margin : 10px;
+  margin-bottom : 10px;
+  top : -80px;
+  padding : 5px;
+  border-radius : 15px;
+ 
 }
 
 #compSub {
   position : relative;
-  border-style: outset;
-  top : 0px;
-  width : 95%;
-  padding : 25px;
+  border : 1px lightblue solid;
+  top : -60px;
+  width : 90%;
+  padding : 15px;
   height : auto;;
-  border-radius : 25px;
+  border-radius : 15px;
 }
 
 #imgDiv {  position: relative;
-    padding: 10px;
     width: 270px;
     border-style: dashed;
     border-width: 2px;
@@ -42,7 +45,7 @@
 }
 #logo_image_holder{
     position: relative;
-    left :40% ;
+    left :30%;
     margin-left: auto;
     margin-right: auto;
     width : 50%;
@@ -56,21 +59,21 @@
 }
 #picHeading {
   position : relative;
-  font-size : xx-large;
+  font-size : x-large;
   width : 30%;
-  left : 20%;
-  top : -50px;
+  left : 0%;
+  top : -110px;
   text-decoration : underline;
 }
 #dateTime {
   position: relative;
-  left: -70%;
+  left: -37%;
   z-index:3;
   font-size: 18px;
   margin-left:auto;
   padding-left:10px;
   color: green;
-  width: 30%;
+  width: 60%;
 }
 
 #listDiv {
@@ -84,11 +87,11 @@ position : relative;
 
 #imageSpan img {
 	position : relative;
-	width : 200px;
-	height : 200px;
-  left : 30%;
+	width : 100px;
+	height : 100px;
+  left : 60px;
   border-radius : 15px;
-  top : -100px;
+  top : -15px;
 }
 #retHeading {
   position : relative;
