--- a/lnfsmall.css
+++ b/lnfsmall.css
@@ -2,7 +2,7 @@
 #LnFallContainer{
    position : relative;
   width : 93vw;
-  height : 90%; 
+  height : 99%; 
   padding : 20px;
   border : 1px lightblue solid;
   border-radius : 15px;
@@ -10,74 +10,90 @@
   
 }
 #logo_image_holder{
-     position: relative;
-    left: 25%;
+ position: relative;
+    left : 35% ;
     margin-left: auto;
     margin-right: auto;
-    width: 613px;
-    height: 25%;
-    top: -60px;
+    width : 60%;
+    height : 45%;
+    top : -65px;
 }
  #logo_image {
-  position : relative;
-  height : 40%;
-  width : 90%;
+	 height : 60%;
+  width : 70%;
   z-index : 6;
 }
 #dateTime {
   color : green;
-  font-size : large;
+  font-size : medium;
   
+}
+.selectB {
+	position : relative;
+	width : 50%;
+	left : -50px;
+	
 }
 #LostBlock {
-  position : relative;
-  border : 1px blue dashed;
-  width : 55%;
-  height : 230px;
-  padding : 5px;
-  margin : 5px;
-  overflow : auto;
+	position : absolute;
+	width : 80%;
+	height : 90%;
+	z-index : 4;
+	background-color : burlywood;
+	overflow : scroll
 }
-#LostBlock .messSpan {
-  position :relative;
-   
+#messDiv {
+	position : relative;
+	top : 4%;
+}
 
-  
+.messSpan {
+	position : relative;
+	width : 4%;
+	white-space :unset ;
+	top : 0%;
 }
+
+#LostBlock #messDiv ul li {
+	position : relative;
+	left : -10%;
+	max-width : 80%;
+	padding-top : 5px;
+}
+
+
 #FoundBlock {
-  position  : fixed;
-  width : 37%;
-  border : 1px green dashed;
-  top : 340px;
-  left: 57%;
-  height : 230px;
-  padding : 5px;
-  overflow : auto;
+	position : relative;
+	width : 85%;
+	height : 85%;
+	background-color : blue;
+	z-index : 3;
+	top : 15px;
+left : 30px;	
+	padding : 5px;
 }
 #Fheading {
-  position : relative;
-  margin-bottom : 50px;
-  
+	position : relative;
+	top : 90%;
+	left : 55%;
+	
 }
-#FoundBlock .messSpan {
-  position : relative;
-  top : 5%;
-  width : 90%;  
-  display : block;;
-  left : 10px;
-  
+#Lheading {
+	position : relative;
+	top : -3%;
+	left : 0%;
+}
+.italic {
+	font-style : italic;
 }
 #pgButtonslnf {
   position: absolute;
-  top : 50%;
-  font-size : x-large;
+  top : 150px;
+  font-size : large;
   left : 8%;
   width : 200px;
 }
-#pgButtonslnf {
- 
-  
-}
+
 #pgButtonslnf li {
   position : relative;
   float : left;
@@ -99,19 +115,23 @@
   top : -35%;
   width : 95%;
   padding : 15px;
-  height : 65%;
+  height : 85%;
   border-radius : 25px;
   left: 2%;
+  overflow : auto;
+  
   
 }
 #messDiv {
   position : relative;
   height : 75%;
   overflow : auto;
-  top : 15%;
+  top : 20%;
+  left : 5px;
+  width : 90%;
 }
 #messDiv li {
-  font-size : large;
+  font-size : small;
   cursor : pointer;
   width : auto;
   max-width : 90%;
@@ -122,8 +142,9 @@
 .selectB {
   position : relative;
   top : 29px;
-  width: 30%;
-  left: -25px;
+  width: auto;
+  left: 0px;
+  float : left;
   font-size: large;
 }
 .headC {
@@ -135,8 +156,8 @@
 #pgHeading {
   position : relative;
   top : -50px;
-  left : 35%;
-  font-size : xx-large;
+  left : 30%;
+  font-size : x-large;
   text-decoration : underline;
   width : 400px;
   
