Starting to work
Integrated bootstrap.js into pages and it looks good. Perhaps not as completely as it could
but functional, I think is enough for now. Clearly this needs some vigorous cross browser testing but it works on firfox
which is better than IE but I am happy.
Now I just need to clean up the code and I thank you very much.

--- a/Bdetails.css
+++ b/Bdetails.css
@@ -31,12 +31,12 @@
 }
 #DETallContainer #dateTime {
   position: relative;
-  font-size: x-large;
+  z-index:3;
+  font-size: large;
   margin-left:auto;
-  padding-left:10px;
+  padding-left:0px;
   color: green;
-  width: 30%;
-  left : -40%;
+  left : -55%;
 }
 #DETallContainer .buttonclass {
   position: relative;
