--- a/Bindex.css
+++ b/Bindex.css
@@ -12,12 +12,14 @@ body {
 #SFallContainer {
   position : relative;
   width : 89vw;
-  height : auto;
+  height : 93vh;
   padding : 20px;
   border : 1px lightblue inset;
   border-radius : 15px;
   left : 1%;
   margin-top : 2%;
+  overflow: auto;
+  top: -20px;
 }
 	.linkC {
   position : relative;
@@ -40,10 +42,10 @@ body {
   top : 0px;
 }
 #SFallContainer #logo_image_holder {
-    position: relative;
-    left: 40%;
-     top: -80px; 
-  width : auto;
+   position: relative;
+	left: -3%;
+	top: 0px;
+	width: 30%;
 }
 .italC {
   font-style: italic;
@@ -60,9 +62,9 @@ body {
 #SFallContainer #dateTime {
   position: relative;
   top: 15px;
-  left: -70%;
+  left: -40%;
   z-index:3;
-  font-size: x-large;
+  font-size: large;
   margin-left:auto;
   padding-left:10px;
   color: green;
@@ -72,14 +74,14 @@ body {
   display: none;
 }
 #SFallContainer #logo_image{
-	height : 60%;
-  	width : 80%;
+height: 100%;
+	width: 100%;
 }
 #SFallContainer .cathead {
 	position : relative;
    font-size : 300%;
    text-decoration : underline;
-   top : -80px;
+   top : -0px;
    left : 35%;
    z-index : 4;
 }
@@ -96,11 +98,11 @@ body {
 }
 #DDL2{
   position : relative;
-  width: 140px;
+  width: 240px;
 }
 #DDL3dd{
   position : relative;
-  width : 130px;
+  width : 230px;
 }
 #DDLOption{
   position : relative;
@@ -273,14 +275,13 @@ position : relative;
   position : relative;
   width : 95%;
   padding : 15px;
-  top: 105%;
   left: -0%;
 }
 #alphList {
 	position : relative;
   left : -28px;
   width : 95vw;
-
+  height : auto;
 }
 #Ghead {
   position : relative;
@@ -309,7 +310,7 @@ position : relative;
 #retBlock {
   position : relative;
   border : 1px black solid;
-  width : 28%;
+  width : auto;
   display : block;
   top : -60px;
   z-index : 6;
@@ -358,13 +359,13 @@ position : relative;
 }
 .Gbutton {
   position : relative;
-  font-size : xx-large;
-  left : 78%;
+  font-size : x-large;
+  left : 89%;
   padding-bottom : 1px;
   color : blue;
   cursor : pointer;
   width : 150px;
-  top: -1px;
+  top: 60px;
 }
 .Gselect {
   position : relative;
@@ -381,6 +382,7 @@ position : relative;
   left : 75%;
   z-index: 1;
   font-size : xx-large;
+  width : 150px;
   
 }
 .selectholder .helpT {
