--- a/minDataInputS.css
+++ b/minDataInputS.css
@@ -13,14 +13,20 @@
   height : 80%;
   width : 90%;
   z-index : 1;
-  top : -60px;
-   left : 240%;
+  top : -50px;
+   left : 90%;
     
+}
+#refSelect {
+	position : relative;
+	font-size : small;
+    max-width : 90%;
+    overflow : hide;
 }
 
 #logo_image {
   position : relative;
-  height : 80%;
+  height : 70%;
   width : 90%;
   z-index : 1;
   
@@ -32,11 +38,11 @@
   display : none;
 }
 .thisareaLabel {
-    font-size : x-large;
+    font-size : medium;
     border : solid 1px green;
-    padding : 2px;
-    margin-right : 15px;
-    width : 45%;
+    padding : 3px;
+    margin-right : 1.5px;
+    width : 49%;
     float : left;
     color : black;
     cursor : pointer;
@@ -76,37 +82,34 @@
 }
 #Heading {
     position : relative;
-    top : -150px;
-    left : 30%;
-    width : 500px;
+    top : -50px;
+    left : 25%;
+    width : 150px;
     
 }
 #headingText{
- font-size : xx-large;
+ font-size : large;
  text-align : center;
- width : 500px;
+ width : 150px;
  color : black;
  text-decoration : underline;
 }
 #headinglist {
 	position : relative;
-	max-width : 55%;
+	max-width : 100%;
 	border : dashed 1px green;
-	height : 400px;
+	height : 100px;
 	overflow : auto;
-	margin : 10px;
     border-radius : 10px;
-    padding : 5px;
 }
 #dateTime {
     position: relative;
-    left : -68%;
+    left : -40%;
     z-index: 1;
-    font-size: 18px;
+    font-size: small;
     margin-left: auto;
-    padding-left: 10px;
     color: green;
-    width: 30%;    
+    width: 60%;    
 }
 #sendeditButton {
 	position : relative;
@@ -131,13 +134,13 @@
     position : relative;
     border : dashed 1px green;
     padding :10px; 
-    max-width : 30%;
-    height : 180px; 
+    max-width : 90%;
+    height : 150px; 
     margin : 10px;
-    top : -400px;
-    left :60%;
+    top : -00px;
+    left :0%;
     border-radius:  25px;
-    font-size:  20px;
+    font-size:  medium;
 }
 #addimages {
     position : relative;
@@ -173,17 +176,16 @@
 #detail_fs_min {
   position : relative;
   border-style: inset;
-   top : -145px; 
-  width : 98%;
-  height : 85%;
+   top : -55px; 
+  width : 99%;
+  height : 75%;
   margin : 1px;
   overflow : auto;
-  overflow-x : hidden;
-  white-space : nowrap;
+    padding : 1px;
 }
 #pgButtons {
     position: relative;
-	top : -150px;
+	top : -50px;
     width : auto;
     left : 20px;
     z-index: 3;
@@ -193,17 +195,22 @@
 	border : 1px black dashed;
   	background-color : rgba(205,135, 12, 0.7);
     padding-top: 3px;
-    top : -180px;       		
+    top : -0px; 
+    margin : 10px;
+    width : 110px;
 }
 .thumbpic {
 	position : relative;
-	width : 150px;
-	height : 150px;
+	width : 100px;
+	height : 100px;
 }
 #images {
 position : relative;
-    top : -190px;
-  display:block;
+    top : -0px;
+    max-width : 100%;
+    overflow : hide;
+    border : 1px black solid;
+    padding : 10px;
 }
 #optionsDsplay {
 	position : relative;
@@ -316,44 +323,58 @@ position : relative;
 #shortSrcBlock {
      position : relative;
     border : 1px black solid;
-    top :-454px;
-    left : 56%;
-    margin: 10px;
-    width : 480px;
+    top :4px;
+    left : 0%;
+    margin: 0px;
+    width : 99%;
+    font-size : medium;
+    padding : 10px;
+    margin-bottom : 15px;
+    border-radius : 12px;
+
+}
+#shortSrcBlock input {
+    position : relative;
+    font-size : small;
+    width : 80px;
+    margin : 2px;
+    padding : 1px;
+    
+
 }
 #pgDialog {
     position : absolute;
     border : 1px black solid;
     border-radius : 15px;
-    width : 30%;
+    width : 60%;
     height : 150px;
     background-color : yellow;
-    top : 58%;
-    left  : 57%;
+    top : 48%;
+    left  : 19%;
     
 }
 #pgDialog #pgNum {
     position : relative;
     width : 60%;
-    left : 10%;
-    font-size : x-large;
+    left : 4%;
+    font-size : large;
     margin-bottom : 10px;
 }
 #pgDialog label {
     position : relative;
-    left : 10%;
+    left : 5%;
     clear : right;
-    font-size : x-large;
+    font-size :large;
 }
 #pgDialog #addButt {
     position : relative;
     font-size : large;
-    left : 33%;
+    left : 4%;
     
 }
 #clButton {
     position : relative;
-    left : -40%;
+    left : 5%;
     font-size : large;
     
 }
@@ -363,15 +384,14 @@ fieldset {
 }
 #SrcBlock {
     position : absolute;
-    width :  40%;
-    top : 50%;
+    width :  80%;
+    top : 35%;
     height : 240px;
-    left : 53%;
+    left : 10%;
     background-color : yellow;
     overflow : auto;
     border : 1px black solid;
     border-radius : 15px;
-    scroll : auto;
 }
 #SrcBlock span {
     position : relative;
@@ -383,30 +403,32 @@ fieldset {
 }
 #SrcBlock label {
     position : relative;
-    font-size : large;
-    width : 40%;
+    font-size : medium;
+    width : 80%;
     top : 0px;
-    margin-left : 3px;
+    margin : 3px;
 }
 #SrcBlock input {
     position : relative;
     float : right;
     top : 0px;
-    margin-bottom : 10px
+    left : 20px;
+    margin-left : 5px;
   
 }
 #SrcBlock .buttonC {
     position : relative;
     top : 5px;
-    left : -290px;
+    left : -62px;
     font-size: large;
     margin : 3px;
-    margin-bottom : 12px;
+    margin-bottom : 10px;
 }
 #SrcBlock select {
     position : relative;
     font-size : large;
-    float : right;
+    float : left;
+    left : 20px;
     top : -0px;
     margin-bottom : 10px;
     
@@ -462,7 +484,7 @@ fieldset {
   /*! position : relative; */
   border : none;
   background : none;
-  font-size: x-large;
+  font-size: large;
   text-decoration : underline;
   cursor : pointer;
    margin-right : 10px;
