--- a/minedit.css
+++ b/minedit.css
@@ -26,11 +26,16 @@
   
 }
 
+#logo_image_holder {
+	position: relative;
+	left: -3%;
+	top: 0px;
+	width: 30%;
+}
+
 #logo_image {
-  position : relative;
-  width : 30%;
-  left : 70%;
-  top : -70px;
+ height: 100%;
+	width: 100%;
 }
 .hiddentext {
   display : none;
@@ -53,12 +58,12 @@
 
 #dateTime {
   position: relative;
-  left: 20px;
   z-index:3;
-  font-size: 18px;
+  font-size: large;
   margin-left:auto;
   padding-left:0px;
   color: green;
+  left : -55%;
 }
 .nothiddentext {
   position : relative;
