--- a/vegedit.css
+++ b/vegedit.css
@@ -25,13 +25,16 @@
   left : 0%;
   
 }
-
+#logo_image_holder {
+	position: relative;
+	left: -3%;
+	top: 0px;
+	width: 30%;
+}
 
 #logo_image {
-  position : relative;
-  width : 40%;
-  left : 60%;
-  top : -70px;
+ height: 100%;
+	width: 100%;
 }
 .hiddentext {
   display : none;
@@ -55,10 +58,11 @@
 #dateTime {
   position: relative;
   z-index:3;
-  font-size: 18px;
+  font-size: large;
   margin-left:auto;
   padding-left:0px;
   color: green;
+  left : -55%;
 }
 
 .nothiddentext {
