--- a/Sanimedit.css
+++ b/Sanimedit.css
@@ -5,7 +5,7 @@
   padding : 20px;
   border : 1px lightblue solid;
   border-radius: 22px;
-  margin-left : 18px;
+  margin-left : 5px;
  
 }
 #oldImageContainer {
@@ -22,7 +22,7 @@
     position : relative;
     font-size : large;
     width: auto;
-    top: -85px;
+    top: -40px;
 }
 
 .buttonclass {
@@ -39,9 +39,9 @@
 }
 #logo_image {
   position : relative;
-  width : 60%;
-  left : 45%;
-  top : -70px;
+  width : 100%;
+  left : 10%;
+  top : -10px;
 }
 .hiddentext {
   display : none;
@@ -51,7 +51,7 @@
 #detail_fs_min {
   position : relative;
   border : 1px lightblue inset;
-  top : -75px;
+  top : -25px;
   width : 99%;
   padding : 15px;
   height : auto;
@@ -68,6 +68,8 @@
   margin-left:auto;
   padding-left:0px;
   color: green;
+  left : -30%;
+  top : -10px;
 }
 .nothiddentext {
   position : relative;
@@ -100,7 +102,8 @@
   position : relative;
   font-size: x-large;
   left : 20%;
-  top : -60px;
+  top : -20px;
+    width : 250px;
   text-decoration : underline;
   
 }
@@ -151,13 +154,14 @@
   width : 200px;
   max-height : 150px;
   overflow : auto;
+
 }
 #images {
   position : relative;
   height : 290px;
   border : 1px black solid;
   overflow : auto;
-  top : -70px;
+  top : -20px;
   left : 3px;
   width : 100%;
   overflow-x: auto;
