--- a/Sminedit.css
+++ b/Sminedit.css
@@ -5,7 +5,7 @@
   padding : 20px;
   border : 1px lightblue solid;
   border-radius: 22px;
-  margin-left : 18px;
+  margin-left : 5px;
  
 }
 #oldImageContainer {
@@ -13,7 +13,7 @@
   background-color:  red;
   width : 99%;
   height : 200%;
-  top : -35px;
+  top : 0px;
   
    z-index : 0;
 }
@@ -22,9 +22,8 @@
     position : relative;
     font-size : large;
     width: auto;
-    top: -85px;
+    top: -40px;
 }
-
 .buttonclass {
   position : relative;
    border-radius: 25px; 
@@ -39,9 +38,9 @@
 }
 #logo_image {
   position : relative;
-  width : 60%;
-  left : 45%;
-  top : -70px;
+  width : 100%;
+  left : 10%;
+  top : -10px;
 }
 .hiddentext {
   display : none;
@@ -51,7 +50,7 @@
 #detail_fs_min {
   position : relative;
   border : 1px lightblue inset;
-  top : -75px;
+  top : -25px;
   width : 99%;
   padding : 15px;
   height : auto;
@@ -68,8 +67,8 @@
   margin-left:auto;
   padding-left:0px;
   color: green;
-  top : -9px;
-  left : 0px
+  left : -30%;
+  top : -10px;
 }
 .nothiddentext {
   position : relative;
@@ -101,8 +100,9 @@
 #headingText {
   position : relative;
   font-size: x-large;
-  left : 5%;
-  top : -60px;
+  left : 20%;
+  top : -20px;
+  width : 250px;
   text-decoration : underline;
   
 }
@@ -112,29 +112,16 @@
   background-color : rgba(205,135, 12, 0.7);
   padding-left: 2px;
   padding-top: 3px;
-  width : 110px;
-  max-width : 200px;
+  width : 80%;
   max-height : 100px;
   overflow: auto;
   left : 0%;
   top : 5px;   
   z-index : 1;
 }
-
-#newImages input {
-  position : relative;
-  width : 180px;
-  
-}
-#imgDisplay img {
-  position : relative;
-  margin-right : 3px;
-  margin-bottom : 3px;
-  
-}
 .imgClass{
   	position : relative;
-	width : 100px;
+	width : 150px;
 	height : 100px;
   
   	border-radius: 12px;
@@ -166,27 +153,27 @@
   width : 200px;
   max-height : 150px;
   overflow : auto;
+
 }
 #images {
   position : relative;
   height : 290px;
   border : 1px black solid;
   overflow : auto;
-  top : -70px;
+  top : -20px;
   left : 3px;
   width : 100%;
   overflow-x: auto;
   border-radius: 15px;
-  padding: 15px;
+  padding-left: 15px;
 }
 #oldImages {
   position : relative;
   padding : 2px;
   background-color: lightgreen;
   width : 110px;
-  height : 200px;
+  max-height : 150px;
   margin-bottom : 8px;
-  top : 30px;
 }
 #oldImages img {
   position : relative;
@@ -195,38 +182,36 @@
 }
 #oldImages label {
   position : relative;
-  text-decoration: none;
-  font-size: small;
+  left : 
   
 }
 
 
 #newImages {
   position :relative;
-  top : -10px;
+  top : 5px;
   left : 0% ;
-  width : 100%;
+  width : 99%;
   background-color: lightblue;
-  height : 190px;
-  padding-left: 10px;
+  height : 200px;
   
 }
 #oldTags {
   position : absolute;
-  left : 125px; 
-  top : -10px;
+  left : 118px; 
+  top : -0px;
   height : 100px;
-  width: 150px;
+  width: 200px;
 }
 #oldTags label {
   position : relative;
-  left : 10px;
+  left : 20px;
   top : 10px;
   
 }
 #oldTags textarea {
   position : relative;
-  width : 170px;
+  width : 180px;
   
 }
 #optionsDsplay{
