--- a/Svegedit.css
+++ b/Svegedit.css
@@ -5,7 +5,7 @@
   padding : 20px;
   border : 1px lightblue solid;
   border-radius: 22px;
-  margin-left : 18px;
+  margin-left : 5px;
  
 }
 #oldImageContainer {
@@ -13,7 +13,7 @@
   background-color:  red;
   width : 99%;
   height : 200%;
-  top : -35px;
+  top : 0px;
   
    z-index : 0;
 }
@@ -22,7 +22,7 @@
     position : relative;
     font-size : large;
     width: auto;
-    top: -85px;
+    top: -40px;
 }
 
 .buttonclass {
@@ -39,9 +39,9 @@
 }
 #logo_image {
   position : relative;
-  width : 60%;
-  left : 45%;
-  top : -70px;
+  width : 100%;
+  left : 10%;
+  top : -10px;
 }
 .hiddentext {
   display : none;
@@ -51,7 +51,7 @@
 #detail_fs_min {
   position : relative;
   border : 1px lightblue inset;
-  top : -75px;
+  top : -25px;
   width : 99%;
   padding : 15px;
   height : auto;
@@ -68,8 +68,8 @@
   margin-left:auto;
   padding-left:0px;
   color: green;
-  top : -9px;
-  left : 0px
+  left : -30%;
+  top : -10px;
 }
 .nothiddentext {
   position : relative;
@@ -101,8 +101,9 @@
 #headingText {
   position : relative;
   font-size: x-large;
-  left : 5%;
-  top : -60px;
+  left : 10%;
+  top : -20px;
+    width : 300px;
   text-decoration : underline;
   
 }
@@ -153,26 +154,29 @@
   width : 200px;
   max-height : 150px;
   overflow : auto;
+
 }
 #images {
   position : relative;
+  display : block;
   height : 290px;
   border : 1px black solid;
   overflow : auto;
-  top : -70px;
+  top : -20px;
   left : 3px;
-  width : 100%;
+  width : 95%;
   overflow-x: auto;
   border-radius: 15px;
-  padding-left: 15px;
+  padding: 10px;
 }
 #oldImages {
   position : relative;
   padding : 2px;
   background-color: lightgreen;
-  width : 120px;
-  height : 200px;
+  width : 110px;
+  max-height : 150px;
   margin-bottom : 8px;
+  top : 5px;
 }
 #oldImages img {
   position : relative;
@@ -181,32 +185,30 @@
 }
 #oldImages label {
   position : relative;
-  text-decoration: none;
-  font-size: small;
+  left : 
   
 }
 
 
 #newImages {
   position :relative;
-  top : -30px;
+  top : 5px;
   left : 0% ;
   width : 99%;
   background-color: lightblue;
   height : 200px;
-  padding-left: 10px;
   
 }
 #oldTags {
   position : absolute;
-  left : 110px; 
-  top : -10px;
+  left : 118px; 
+  top : -0px;
   height : 100px;
   width: 200px;
 }
 #oldTags label {
   position : relative;
-  left : 10px;
+  left : 20px;
   top : 10px;
   
 }
