--- a/animDataInput.css
+++ b/animDataInput.css
@@ -193,7 +193,10 @@
 	border : 1px black dashed;
   	background-color : rgba(205,135, 12, 0.7);
     padding-top: 3px;
-    top : -180px;       		
+    top : -370px;  
+    width : 170px;
+    padding : 10px;
+    left : 50%;
 }
 .thumbpic {
 	position : relative;
@@ -314,9 +317,9 @@ position : relative;
 }
     
 #shortSrcBlock {
-     position : relative;
+     position : absolute;
     border : 1px black solid;
-    top : -427px;
+    top : 230px;
     left :56%;
     margin: 10px;
     width : 43%;
