--- a/smallerDevice.css
+++ b/smallerDevice.css
@@ -352,24 +352,25 @@ height : 30px;
 	width : 98%;
 	height : auto;
 	margin : 2px;
-	left : -5px;
+	left : 5px;
+	padding : 5px;
 }
 #DETallContainer #dateTime {
 	position : relative;
-	left :-10%;
-	top : -25px;
+	left :-4%;
+	top : -5px;
 	font-size : medium;
 	width : 60%;
 }
 #DETallContainer #logo_image {
 	position : relative;
 	left : 20%;
-	top : -10px;
+	top : -0px;
 		width : 80%;
 }
 #pgHeading {
 	position: relative;
-	top: -65px;
+	top: -35px;
 	left: 30%;
 	font-size: xx-large;
 	text-decoration: underline;
@@ -392,7 +393,7 @@ height : 30px;
 }
 #DETallContainer #pgButtons {
 	position : relative;
-	top : -60px;
+	top : -40px;
 }
 #pgButtons input {
 	position : relative;
@@ -404,8 +405,8 @@ height : 30px;
 #DETallContainer #detail_fs {
 	position : relative;
 	width : 90vw;
-	left : -20px;
-	top : -95px;
+	left : -0px;
+	top : -75px;
 	height : 78%;
 }
 #DETallContainer #catHeading {
@@ -483,8 +484,8 @@ p {
     padding: 5px;
     width: 44vw;
     font-size: large;
-    top: -90px;
-    left: -15px;
+    top: -70px;
+    left: -1px;
 	margin-right : 5px;
 	margin-bottom : 0px;
 }
@@ -495,7 +496,7 @@ p {
     height: 40px;
 	  min-width : 15%;
 	  width : 180px;
-    top: -290px;
+    top: -270px;
     left: 47%;
     font-size: large;
     text-decoration: underline;
@@ -554,7 +555,7 @@ p {
 #pgButtons input {
 	border-radius : 10px;
 	margin : 1px;
-	background-color: dodgerblue;
+	background-color: none;
 	font-size: large;
 }
 #pgButtons a {
