--- a/vegedit.css
+++ b/vegedit.css
@@ -165,18 +165,21 @@
 }
 #images {
   position : relative;
+  display : block;
   height : 200px;
   border : 1px black solid;
+  border-radius : 12px;
   overflow : auto;
   top : -30px;
   left : 3px;
   width : 98%;
   overflow-x:  hidden;
+  padding : 5px;
   
 }
 #oldImages {
   position : relative;
-  top : -18px;
+  top : 0px;
   padding-left : 12px;
   width:  200px;
 }
