--- a/Blnf.css
+++ b/Blnf.css
@@ -11,17 +11,16 @@
 }
 #logo_image_holder{
      position: relative;
-    left: 25%;
+    left: 35%;
     margin-left: auto;
     margin-right: auto;
-    width: 613px;
-    height: 25%;
+    width: 30%;
     top: -60px;
 }
  #logo_image {
   position : relative;
-  height : 40%;
-  width : 90%;
+  height : 100%;
+  width : 100%;
   z-index : 6;
 }
 #dateTime {
@@ -32,7 +31,7 @@
 #LostBlock {
   position : relative;
   border : 1px blue dashed;
-  width : 55%;
+  width : 98%;
   height : 230px;
   padding : 5px;
   margin : 5px;
@@ -48,11 +47,12 @@
   position  : fixed;
   width : 37%;
   border : 1px green dashed;
-  top : 340px;
+  top : 250px;
   left: 57%;
   height : 230px;
   padding : 5px;
   overflow : auto;
+  display : none;
 }
 #Fheading {
   position : relative;
@@ -69,10 +69,10 @@
 }
 #pgButtonslnf {
   position: absolute;
-  top : 50%;
+  top : 30%;
   font-size : x-large;
   left : 8%;
-  width : 200px;
+  width : 300px;
 }
 #pgButtonslnf {
  
@@ -82,21 +82,31 @@
   position : relative;
   float : left;
   margin : 5px;
-  top : -50px;
+  top : -0px;
   width : 90px;
   border-radius  : 10px;
   text-align : center;
   padding : 3px;
+  font-size : xx-large;
+  margin-right : 10px;
   
 }
 .hiddentext {
   display : none;
   
 }
+a  {
+  color : black;
+   
+}
+a:hover {
+  color : lightblue;
+  text-decoration : underline;
+}
 #detail_fs_main {
   position : relative;
   border : 1px lightblue solid;
-  top : -35%;
+  top : -35px;
   width : 95%;
   padding : 15px;
   height : 65%;
@@ -134,9 +144,9 @@
 }
 #pgHeading {
   position : relative;
-  top : -50px;
+  top : -70px;
   left : 35%;
-  font-size : xx-large;
+  font-size : 38px;
   text-decoration : underline;
   width : 400px;
   
