--- a/Bsource.css
+++ b/Bsource.css
@@ -3,17 +3,18 @@
 #SrcallContainer {
   position : relative;
   width : 95%;
-  height : 100%; 
+  height : 95vh; 
   padding : 20px;
   border : 1px lightblue solid;
   border-radius : 15px;
   left : 5px;
   top : 20px;
+  overflow : auto;
 }
 #src_fs_main {
   position : relative;
   border : 1px lightblue solid;
-  top : -20%;
+  top : -90px;
   width : 95%;
   padding : 15px;
   min-height: 120px;
@@ -23,7 +24,7 @@
 }
 #SrcallContainer #dateTime {
   position: relative;
-  left: -70%;
+  left: -68%;
   z-index:3;
   font-size: 18px;
   margin-left:auto;
@@ -34,26 +35,34 @@
 
 #SrcallContainer #logo_image_holder{
     position: relative;
-    left :9%;
+    left :35%;
     margin-left: auto;
     margin-right: auto;
-    width : 813px;
-    height : 25%;
+    width : 30%;
     top : -60px;
 }
 
 #SrcallContainer #logo_image {
-  height : 60%;
-  width : 70%;
+  height : 100%;
+  width : 100%;
   z-index : 6;
 }
 #pgHead {
   position : relative;
-  top : -20%;
+  top : -60px;
   left : 30%;
   font-size : xx-large;
   text-decoration: underline;
   width : 300px;
+  
+}
+a {
+  color : black;
+  
+}
+a:hover {
+  color : lightblue;
+  text-decoration : underline;
   
 }
 #src_fs_main span {
@@ -106,12 +115,13 @@
 #pgButtons li {
   position : relative;
   float : left;
-  top : -50px;
-  left : 1%;
-  font-size : x-large;
+  top : -80px;
+  left : 3%;
+  font-size : xx-large;
   margin : 5px;
   border-radius : 10px;
   padding : 3px;
+  color : black;
   
 }
 .linkC {
@@ -119,12 +129,14 @@
   border : none;
   background : none;
   font-size: x-large;
-  text-decoration : underline;
+  text-decoration : none;
+  color : black;
   cursor : pointer;
   margin : 10px;
 }
 .linkC:hover {
-  color : blue;
+  color : lightblue;
+  text-decoration : underline;
   
 }
 #retHeading {
@@ -201,4 +213,9 @@
 .buttonC {
   position : relative;
   left : -23%;
+}
+.inputSet {
+  position : relative;
+  margin : 5px;
+  
 }
