--- a/minDataInput.css
+++ b/minDataInput.css
@@ -468,18 +468,20 @@ fieldset {
     border : none;
     
 }
-	.linkC {
+		.linkC {
   /*! position : relative; */
   border : none;
   background : none;
   font-size: x-large;
-  text-decoration : underline;
   cursor : pointer;
-   margin-right : 10px;
-  color: blue;
+  margin-right : 10px;
+  color: black;
+  cursor : pointer;
+        text-decoration : none;
+
   }
 .linkC:hover {
-  color : green;
-  cursor : pointer;
+  color : lightblue;
+  text-decoration : underline;
   
 }
