--- a/minedit.css
+++ b/minedit.css
@@ -198,11 +198,13 @@
   border : none;
   background : none;
   font-size: x-large;
-  text-decoration : underline;
+  text-decoration : none;
+  color : black;
   cursor : pointer;
   margin-right : 10px
   }
 .linkC:hover {
-  color : blue;
+  color : lightblue;
+  text-decoration : underline;
   
 }
